2015-09-29 John Wu <John dot Wu at ACM dot org>
	* src/*.h, src/*.cpp: rename stringList to stringArray, typeList
	to typeArray, bufferList to bufferArray, to make it clear these
	types are using ibis::array_t
	* src/table.h: add type stringVector to create a new version of
	ibis::table::parseNames

2015-09-28 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.h: comment out the code for softWriteLock, it is
	not used
	* src/fileManager.cpp: make sure there is enough space to read the
	expected content before calling doRead, in an attempt to avoid
	deadlock ibis::fileManager::mutex
	* examples/ibis.cpp, examples/thula.cpp: replace the use of
	ibis::table::stringList with std::vector<const char*> for local
	variables -- these local variables were tiggering the invocation
	of fileManager::instance() before the parameters for the file
	manager is known

2015-09-12 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.h, src/fileManager.cpp: add function
	getMaxOpenMmapFiles and getMaxMmapBytes per suggestion of Jon
	Stabala

2015-09-12 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: change the number of test queries to be
	determined by -t option instead of a product of number of threads
	and the testing option, i.e., -t 100 will always generate 100
	random queries.  It will try to make sure each thread has two
	queries to process, so when the number of threads is large, it
	will still inscrease the number of random queries generated.
	* test/Makefile.am: change check-sq0 and check-sq1 to use multiple
	threads to speed up the test execution.  On a MacBook Pro,
	check-sq0 runs in 90 seconds.
	* examples/ibis.cpp: change all invocations of buildIndexes to use
	global variables indexingOptioins and build_index to control the
	type of index built and the number of threads used

2015-09-02 John Wu <John dot Wu at ACM dot org>
	* src/fileManger.cpp:634 move tests on OPEN_MAX and STREAM_MAX as
	fallback option of sysconf(_SC_OPEN_MAX), which should give the