@@ -4,6 +4,9 @@
 	types are using ibis::array_t
 	* src/table.h: add type stringVector to create a new version of
 	ibis::table::parseNames
+	* src/fileManager.cpp: in getFile, surround tmp->enlarge call with
+	try-catch blocks to enable retry to allocate memory (but only
+	retry once)
 
 2015-09-28 John Wu <John dot Wu at ACM dot org>
 	* src/fileManager.h: comment out the code for softWriteLock, it is
